# stm32g0b1vet6

./: .gitignore  README.md  advanced.ld  basic.ld  meson.build
cross/: arm-none-eabi.cross
software/: main.c  meson.build
software/dht22/: meson.build
software/dht22/include/: dht22.h
software/dht22/src/: dht22.c
software/display/: meson.build
software/display/include/: display.h  lv_conf.h
software/display/src/: display.c
software/gpio/: meson.build
software/gpio/include/: gpio.h
software/gpio/src/: gpio.c
software/log/: meson.build
software/log/include/: log.h
software/log/src/: log.c
software/lvgl_ui/: meson.build
software/lvgl_ui/include/: ui.h  ui_events.h  ui_helpers.h
software/lvgl_ui/source/: ui.c  ui_helpers.c
software/lvgl_ui/source/screens/: ui_Screen1.c
software/lvgl_ui/src/: ui.c  ui_helpers.c
software/lvgl_ui/src/fonts/: ui_font_Font1.c
software/lvgl_ui/src/images/: ui_img_rhum_small_png.c  ui_img_temp_small_png.c
software/lvgl_ui/src/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c
software/network/: meson.build
software/network/include/: FreeRTOSIPConfig.h
software/network/src/: enc28j60.c
software/spi/: meson.build
software/spi/include/: spi.h
software/spi/src/: spi.c
software/startup/: meson.build
software/startup/include/: FreeRTOSConfig.h  board_config.h
software/startup/src/: callbacks.c  startup.c  syscalls.c
subprojects/: arm_cmsis_6.wrap  freertos.wrap  freertos_plus_tcp.wrap  lvgl.wrap  st_g0_cmsis.wrap
subprojects/packagefiles/arm_cmsis_6/: meson.build
subprojects/packagefiles/freertos/: meson.build
subprojects/packagefiles/freertos_plus_tcp/: meson.build
subprojects/packagefiles/lvgl/: meson.build
subprojects/packagefiles/st_g0_cmsis/: meson.build
