project('freertos_plus_tcp', 'c')

freertos_plus_tcp_inc = include_directories([
    'source/include',
    'source/portable/Compiler/GCC',
    'source/portable/NetworkInterface/include'
])

freertos__plus_tcp_src = files([
    'source/FreeRTOS_ARP.c',
    'source/FreeRTOS_DHCP.c',
    'source/FreeRTOS_DNS_Cache.c',
    'source/FreeRTOS_DNS_Callback.c',
    'source/FreeRTOS_DNS_Networking.c',
    'source/FreeRTOS_DNS_Parser.c',
    'source/FreeRTOS_DNS.c',
    'source/FreeRTOS_ICMP.c',
    'source/FreeRTOS_IP_Timers.c',
    'source/FreeRTOS_IP_Utils.c',
    'source/FreeRTOS_IP.c',
    'source/FreeRTOS_Sockets.c',
    'source/FreeRTOS_Stream_Buffer.c',
    'source/FreeRTOS_TCP_IP.c',
    'source/FreeRTOS_TCP_Reception.c',
    'source/FreeRTOS_TCP_State_Handling.c',
    'source/FreeRTOS_TCP_Transmission.c',
    'source/FreeRTOS_TCP_Utils.c',
    'source/FreeRTOS_TCP_WIN.c',
    'source/FreeRTOS_Tiny_TCP.c',
    'source/FreeRTOS_UDP_IP.c',
    'source/portable/BufferManagement/BufferAllocation_2.c',
    'source/portable/NetworkInterface/Common/phyHandling.c',
])