project('lvgl', 'c')

lvgl_inc = include_directories(
    [
        '.',
        'src',
        'src/core',
        'src/display',
        'src/draw',
        'src/drivers',
        'src/font',
        'src/indev',
        'src/layouts',
        'src/libs',
        'src/misc',
        'src/osal',
        'src/others',
        'src/stdlib',
        'src/themes',
        'src/tick',
        'src/widgets',
    ]
)
#st_g0_cmsis_src = files([])