project('lvgl', 'c')

lvgl_inc = include_directories(
    [
        '.',
        'src',
        'src/core',
        'src/display',
        'src/draw',
        'src/draw/nxp/pxp',
        'src/draw/nxp/vglite',
        'src/draw/renesas/dave2d',
        'src/draw/sdl',
        'src/draw/sw',
        'src/draw/sw/arm2d',
        'src/draw/sw/blend',
        'src/draw/sw/blend/arm2d',
        'src/draw/sw/blend/helium',
        'src/draw/sw/blend/neon',
        'src/draw/vg_lite',
        'src/drivers',
        'src/drivers/display',
        'src/drivers/display/drm',
        'src/drivers/display/fb',
        'src/drivers/display/ili9341',
        'src/drivers/display/lcd',
        'src/drivers/display/st7735',
        'src/drivers/display/st7789',
        'src/drivers/display/st7796',
        'src/drivers/display/tft_espi',
        'src/drivers/evdev',
        'src/drivers/libinput',
        'src/drivers/nuttx',
        'src/drivers/sdl',
        'src/drivers/windows',
        'src/drivers/x11',
        'src/font',
        'src/indev',
        'src/layouts',
        'src/layouts/flex',
        'src/layouts/grid',
        'src/libs',
        'src/libs/barcode',
        'src/libs/bin_decoder',
        'src/libs/bmp',
        'src/libs/ffmpeg',
        'src/libs/freetype',
        'src/libs/fsdrv',
        'src/libs/gif',
        'src/libs/libjpeg_turbo',
        'src/libs/libpng',
        'src/libs/lodepng',
        'src/libs/lz4',
        'src/libs/qrcode',
        'src/libs/rle',
        'src/libs/rlottie',
        'src/libs/thorvg',
        'src/libs/tiny_ttf',
        'src/libs/tjpgd',
        'src/misc',
        'src/misc/cache',
        'src/osal',
        'src/others',
        'src/others/file_explorer',
        'src/others/fragment',
        'src/others/gridnav',
        'src/others/ime',
        'src/others/imgfont',
        'src/others/monkey',
        'src/others/observer',
        'src/others/snapshot',
        'src/others/sysmon',
        'src/others/vg_lite_tvg',
        'src/stdlib',
        'src/stdlib/builtin',
        'src/stdlib/clib',
        'src/stdlib/micropython',
        'src/stdlib/rtthread',
        'src/themes',
        'src/themes/default',
        'src/themes/mono',
        'src/themes/simple',
        'src/tick',
        'src/widgets',
        'src/widgets/animimage',
        'src/widgets/arc',
        'src/widgets/bar',
        'src/widgets/button',
        'src/widgets/buttonmatrix',
        'src/widgets/calendar',
        'src/widgets/canvas',
        'src/widgets/chart',
        'src/widgets/checkbox',
        'src/widgets/dropdown',
        'src/widgets/image',
        'src/widgets/imagebutton',
        'src/widgets/keyboard',
        'src/widgets/label',
        'src/widgets/led',
        'src/widgets/line',
        'src/widgets/list',
        'src/widgets/menu',
        'src/widgets/msgbox',
        'src/widgets/objx_templ',
        'src/widgets/roller',
        'src/widgets/scale',
        'src/widgets/slider',
        'src/widgets/span',
        'src/widgets/spinbox',
        'src/widgets/spinner',
        'src/widgets/switch',
        'src/widgets/table',
        'src/widgets/tabview',
        'src/widgets/textarea',
        'src/widgets/tileview',
        'src/widgets/win',
    ]
)
st_g0_cmsis_src = files([
    'src/lv_init.c',
    'src/core/lv_group.c',
    'src/core/lv_obj_class.c',
    'src/core/lv_obj_draw.c',
    'src/core/lv_obj_event.c',
    'src/core/lv_obj_id_builtin.c',
    'src/core/lv_obj_pos.c',
    'src/core/lv_obj_property.c',
    'src/core/lv_obj_scroll.c',
    'src/core/lv_obj_style_gen.c',
    'src/core/lv_obj_style.c',
    'src/core/lv_obj_tree.c',
    'src/core/lv_obj.c',
    'src/core/lv_refr.c',
    'src/display/lv_display.c',
    'src/draw/lv_draw_arc.c',
    'src/draw/lv_draw_buf.c',
    'src/draw/lv_draw_image.c',
    'src/draw/lv_draw_label.c',
    'src/draw/lv_draw_line.c',
    'src/draw/lv_draw_mask.c',
    'src/draw/lv_draw_rect.c',
    'src/draw/lv_draw_triangle.c',
    'src/draw/lv_draw_vector.c',
    'src/draw/lv_draw.c',
    'src/draw/lv_image_decoder.c',
    'src/draw/nxp/pxp/lv_draw_buf_pxp.c',
    'src/draw/nxp/pxp/lv_draw_pxp_fill.c',
    'src/draw/nxp/pxp/lv_draw_pxp_img.c',
    'src/draw/nxp/pxp/lv_draw_pxp_layer.c',
    'src/draw/nxp/pxp/lv_draw_pxp.c',
    'src/draw/nxp/pxp/lv_pxp_cfg.c',
    'src/draw/nxp/pxp/lv_pxp_osa.c',
    'src/draw/nxp/pxp/lv_pxp_utils.c',
    'src/draw/nxp/vglite/lv_draw_buf_vglite.c',
    'src/draw/nxp/vglite/lv_draw_vglite_border.c',
    'src/draw/nxp/vglite/lv_draw_vglite_fill.c',
    'src/draw/nxp/vglite/lv_draw_vglite_img.c',
    'src/draw/nxp/vglite/lv_draw_vglite_label.c',
    'src/draw/nxp/vglite/lv_draw_vglite_layer.c',
    'src/draw/nxp/vglite/lv_draw_vglite_line.c',
    'src/draw/nxp/vglite/lv_draw_vglite_triangle.c',
    'src/draw/nxp/vglite/lv_draw_vglite.c',
    'src/draw/nxp/vglite/lv_vglite_buf.c',
    'src/draw/nxp/vglite/lv_vglite_matrix.c',
    'src/draw/nxp/vglite/lv_vglite_path.c',
    'src/draw/nxp/vglite/lv_vglite_utils.c',
    'src/draw/renesas/dave2d/lv_draw_dave2d_arc.c',
    'src/draw/renesas/dave2d/lv_draw_dave2d_border.c',
    'src/draw/renesas/dave2d/lv_draw_dave2d_fill.c',
    'src/draw/renesas/dave2d/lv_draw_dave2d_image.c',
    'src/draw/renesas/dave2d/lv_draw_dave2d_label.c',
    'src/draw/renesas/dave2d/lv_draw_dave2d_line.c',
    'src/draw/renesas/dave2d/lv_draw_dave2d_mask_rectangle.c',
    'src/draw/renesas/dave2d/lv_draw_dave2d_triangle.c',
    'src/draw/renesas/dave2d/lv_draw_dave2d_utils.c',
    'src/draw/renesas/dave2d/lv_draw_dave2d.c',
    'src/draw/sdl/lv_draw_sdl.c',
    'src/draw/sw/lv_draw_sw_arc.c',
    'src/draw/sw/lv_draw_sw_border.c',
    'src/draw/sw/lv_draw_sw_box_shadow.c',
    'src/draw/sw/lv_draw_sw_fill.c',
    'src/draw/sw/lv_draw_sw_gradient.c',
    'src/draw/sw/lv_draw_sw_img.c',
    'src/draw/sw/lv_draw_sw_letter.c',
    'src/draw/sw/lv_draw_sw_line.c',
    'src/draw/sw/lv_draw_sw_mask_rect.c',
    'src/draw/sw/lv_draw_sw_mask.c',
    'src/draw/sw/lv_draw_sw_transform.c',
    'src/draw/sw/lv_draw_sw_triangle.c',
    'src/draw/sw/lv_draw_sw_vector.c',
    'src/draw/sw/lv_draw_sw.c',
    'src/draw/sw/blend/lv_draw_sw_blend_to_argb8888.c',
    'src/draw/sw/blend/lv_draw_sw_blend_to_rgb565.c',
    'src/draw/sw/blend/lv_draw_sw_blend_to_rgb888.c',
    'src/draw/sw/blend/lv_draw_sw_blend.c',
    'src/draw/vg_lite/lv_draw_buf_vg_lite.c',
    'src/draw/vg_lite/lv_draw_vg_lite_arc.c',
    'src/draw/vg_lite/lv_draw_vg_lite_border.c',
    'src/draw/vg_lite/lv_draw_vg_lite_box_shadow.c',
    'src/draw/vg_lite/lv_draw_vg_lite_fill.c',
    'src/draw/vg_lite/lv_draw_vg_lite_img.c',
    'src/draw/vg_lite/lv_draw_vg_lite_label.c',
    'src/draw/vg_lite/lv_draw_vg_lite_layer.c',
    'src/draw/vg_lite/lv_draw_vg_lite_line.c',
    'src/draw/vg_lite/lv_draw_vg_lite_mask_rect.c',
    'src/draw/vg_lite/lv_draw_vg_lite_triangle.c',
    'src/draw/vg_lite/lv_draw_vg_lite_vector.c',
    'src/draw/vg_lite/lv_draw_vg_lite.c',
    'src/draw/vg_lite/lv_vg_lite_decoder.c',
    'src/draw/vg_lite/lv_vg_lite_grad.c',
    'src/draw/vg_lite/lv_vg_lite_math.c',
    'src/draw/vg_lite/lv_vg_lite_path.c',
    'src/draw/vg_lite/lv_vg_lite_pending.c',
    'src/draw/vg_lite/lv_vg_lite_utils.c',
    'src/drivers/display/drm/lv_linux_drm.c',
    'src/drivers/display/fb/lv_linux_fbdev.c',
    'src/drivers/display/ili9341/lv_ili9341.c',
    'src/drivers/display/lcd/lv_lcd_generic_mipi.c',
    'src/drivers/display/st7735/lv_st7735.c',
    'src/drivers/display/st7789/lv_st7789.c',
    'src/drivers/display/st7796/lv_st7796.c',
    # 'src/drivers/display/tft_espi/lv_tft_espi.cpp',
    'src/drivers/evdev/lv_evdev.c',
    'src/drivers/libinput/lv_libinput.c',
    'src/drivers/libinput/lv_xkb.c',
    'src/drivers/nuttx/lv_nuttx_cache.c',
    'src/drivers/nuttx/lv_nuttx_entry.c',
    'src/drivers/nuttx/lv_nuttx_fbdev.c',
    'src/drivers/nuttx/lv_nuttx_image_cache.c',
    'src/drivers/nuttx/lv_nuttx_lcd.c',
    'src/drivers/nuttx/lv_nuttx_libuv.c',
    'src/drivers/nuttx/lv_nuttx_profiler.c',
    'src/drivers/nuttx/lv_nuttx_touchscreen.c',
    'src/drivers/sdl/lv_sdl_keyboard.c',
    'src/drivers/sdl/lv_sdl_mouse.c',
    'src/drivers/sdl/lv_sdl_mousewheel.c',
    'src/drivers/sdl/lv_sdl_window.c',
    'src/drivers/windows/lv_windows_context.c',
    'src/drivers/windows/lv_windows_display.c',
    'src/drivers/windows/lv_windows_input.c',
    'src/drivers/x11/lv_x11_display.c',
    'src/drivers/x11/lv_x11_input.c',
    'src/font/lv_binfont_loader.c',
    'src/font/lv_font_dejavu_16_persian_hebrew.c',
    'src/font/lv_font_fmt_txt.c',
    'src/font/lv_font_montserrat_8.c',
    'src/font/lv_font_montserrat_10.c',
    'src/font/lv_font_montserrat_12.c',
    'src/font/lv_font_montserrat_14.c',
    'src/font/lv_font_montserrat_16.c',
    'src/font/lv_font_montserrat_18.c',
    'src/font/lv_font_montserrat_20.c',
    'src/font/lv_font_montserrat_22.c',
    'src/font/lv_font_montserrat_24.c',
    'src/font/lv_font_montserrat_26.c',
    'src/font/lv_font_montserrat_28_compressed.c',
    'src/font/lv_font_montserrat_28.c',
    'src/font/lv_font_montserrat_30.c',
    'src/font/lv_font_montserrat_32.c',
    'src/font/lv_font_montserrat_34.c',
    'src/font/lv_font_montserrat_36.c',
    'src/font/lv_font_montserrat_38.c',
    'src/font/lv_font_montserrat_40.c',
    'src/font/lv_font_montserrat_42.c',
    'src/font/lv_font_montserrat_44.c',
    'src/font/lv_font_montserrat_48.c',
    'src/font/lv_font_simsun_16_cjk.c',
    'src/font/lv_font_unscii_8.c',
    'src/font/lv_font_unscii_16.c',
    'src/font/lv_font.c',
    'src/indev/lv_indev_scroll.c',
    'src/indev/lv_indev.c',
    'src/layouts/lv_layout.c',
    'src/layouts/flex/lv_flex.c',
    'src/layouts/grid/lv_grid.c',
    'src/layouts/lv_layout.c',
    'src/libs/barcode/code128.c',
    'src/libs/barcode/lv_barcode.c',
    'src/libs/bin_decoder/lv_bin_decoder.c',
    'src/libs/bmp/lv_bmp.c',
    'src/libs/ffmpeg/lv_ffmpeg.c',
    'src/libs/freetype/lv_freetype_glyph.c',
    'src/libs/freetype/lv_freetype_image.c',
    'src/libs/freetype/lv_freetype_outline.c',
    'src/libs/freetype/lv_freetype.c',
    'src/libs/freetype/lv_ftsystem.c',
    'src/libs/fsdrv/lv_fs_cbfs.c',
    'src/libs/fsdrv/lv_fs_fatfs.c',
    'src/libs/fsdrv/lv_fs_littlefs.c',
    'src/libs/fsdrv/lv_fs_memfs.c',
    'src/libs/fsdrv/lv_fs_posix.c',
    'src/libs/fsdrv/lv_fs_stdio.c',
    'src/libs/fsdrv/lv_fs_win32.c',
    'src/libs/gif/gifdec.c',
    'src/libs/gif/lv_gif.c',
    'src/libs/libjpeg_turbo/lv_libjpeg_turbo.c',
    'src/libs/libpng/lv_libpng.c',
    'src/libs/lodepng/lodepng.c',
    'src/libs/lodepng/lv_lodepng.c',
    'src/libs/lz4/lz4.c',
    'src/libs/qrcode/lv_qrcode.c',
    'src/libs/qrcode/qrcodegen.c',
    'src/libs/rle/lv_rle.c',
    'src/libs/rlottie/lv_rlottie.c',
    # 'src/libs/thorvg',
    'src/libs/tiny_ttf/lv_tiny_ttf.c',
    'src/libs/tjpgd/lv_tjpgd.c',
    'src/libs/tjpgd/tjpgd.c',
    'src/misc/lv_anim_timeline.c',
    'src/misc/lv_anim.c',
    'src/misc/lv_area.c',
    'src/misc/lv_array.c',
    'src/misc/lv_async.c',
    'src/misc/lv_bidi.c',
    'src/misc/lv_color_op.c',
    'src/misc/lv_color.c',
    'src/misc/lv_event.c',
    'src/misc/lv_fs.c',
    'src/misc/lv_ll.c',
    'src/misc/lv_log.c',
    'src/misc/lv_lru.c',
    'src/misc/lv_math.c',
    'src/misc/lv_palette.c',
    'src/misc/lv_profiler_builtin.c',
    'src/misc/lv_rb.c',
    'src/misc/lv_style_gen.c',
    'src/misc/lv_style.c',
    'src/misc/lv_templ.c',
    'src/misc/lv_text_ap.c',
    'src/misc/lv_text.c',
    'src/misc/lv_timer.c',
    'src/misc/lv_utils.c',
    'src/misc/cache/_lv_cache_lru_rb.c',
    'src/misc/cache/lv_cache_entry.c',
    'src/misc/cache/lv_cache.c',
    'src/misc/cache/lv_image_cache.c',
    'src/osal/lv_cmsis_rtos2.c',
    'src/osal/lv_freertos.c',
    'src/osal/lv_os_none.c',
    'src/osal/lv_pthread.c',
    'src/osal/lv_rtthread.c',
    'src/osal/lv_windows.c',
    'src/others/file_explorer/lv_file_explorer.c',
    'src/others/fragment/lv_fragment_manager.c',
    'src/others/fragment/lv_fragment.c',
    'src/others/gridnav/lv_gridnav.c',
    'src/others/ime/lv_ime_pinyin.c',
    'src/others/imgfont/lv_imgfont.c',
    'src/others/monkey/lv_monkey.c',
    'src/others/observer/lv_observer.c',
    'src/others/snapshot/lv_snapshot.c',
    'src/others/sysmon/lv_sysmon.c',
    'src/others/vg_lite_tvg/vg_lite_matrix.c',
    # 'src/others/vg_lite_tvg/vg_lite_tvg.cpp'
    'src/stdlib/lv_mem.c',
    'src/stdlib/builtin/lv_mem_core_builtin.c',
    'src/stdlib/builtin/lv_sprintf_builtin.c',
    'src/stdlib/builtin/lv_string_builtin.c',
    'src/stdlib/builtin/lv_tlsf.c',
    'src/stdlib/clib/lv_mem_core_clib.c',
    'src/stdlib/clib/lv_sprintf_clib.c',
    'src/stdlib/clib/lv_string_clib.c',
    'src/stdlib/micropython/lv_mem_core_micropython.c',
    'src/stdlib/rtthread/lv_mem_core_rtthread.c',
    'src/stdlib/rtthread/lv_sprintf_rtthread.c',
    'src/stdlib/rtthread/lv_string_rtthread.c',
    'src/themes/lv_theme.c',
    'src/themes/default/lv_theme_default.c',
    'src/themes/mono/lv_theme_mono.c',
    'src/themes/simple/lv_theme_simple.c',
    'src/tick/lv_tick.c',
    'src/widgets/animimage/lv_animimage.c',
    'src/widgets/arc/lv_arc.c',
    'src/widgets/bar/lv_bar.c',
    'src/widgets/button/lv_button.c',
    'src/widgets/buttonmatrix/lv_buttonmatrix.c',
    'src/widgets/calendar/lv_calendar_header_arrow.c',
    'src/widgets/calendar/lv_calendar_header_dropdown.c',
    'src/widgets/calendar/lv_calendar.c',
    'src/widgets/canvas/lv_canvas.c',
    'src/widgets/chart/lv_chart.c',
    'src/widgets/checkbox/lv_checkbox.c',
    'src/widgets/dropdown/lv_dropdown.c',
    'src/widgets/image/lv_image.c',
    'src/widgets/imagebutton/lv_imagebutton.c',
    'src/widgets/keyboard/lv_keyboard.c',
    'src/widgets/label/lv_label.c',
    'src/widgets/led/lv_led.c',
    'src/widgets/line/lv_line.c',
    'src/widgets/list/lv_list.c',
    'src/widgets/menu/lv_menu.c',
    'src/widgets/msgbox/lv_msgbox.c',
    'src/widgets/objx_templ/lv_objx_templ.c',
    'src/widgets/roller/lv_roller.c',
    'src/widgets/scale/lv_scale.c',
    'src/widgets/slider/lv_slider.c',
    'src/widgets/span/lv_span.c',
    'src/widgets/spinbox/lv_spinbox.c',
    'src/widgets/spinner/lv_spinner.c',
    'src/widgets/switch/lv_switch.c',
    'src/widgets/table/lv_table.c',
    'src/widgets/tabview/lv_tabview.c',
    'src/widgets/textarea/lv_textarea.c',
    'src/widgets/tileview/lv_tileview.c',
    'src/widgets/win/lv_win.c',
])